# drf-auth

./: README.md  docker-compose.yml  pyproject.toml
school/: settings.py  urls.py
students/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
students/migrations/: 0001_initial.py
